k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-app
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
