k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-deployment
  namespace: chat-app
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  serviceName: mongo-service
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-volume
              mountPath: /data/db
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-pvc  # 👈 your manually created PVC
