k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chat-app
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000   # Match containerPort in Kind config
  type: NodePort
